--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 #content {
-    margin-top: 50%;
+    margin-top: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,6 +28,10 @@ td {
     border: 1px solid #333;
     cursor: pointer;
     background-color: #323232;
+}
+
+td:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 table {
@@ -49,6 +53,4 @@ table {
     border-right: 0;
   }
 
-td:hover {
-    background-color: #e0e0e0;
-}
+
